# claw-code-rust

./: .gitattributes  AGENTS.md  ARCHITECTURE.zh-CN.md  Cargo.toml  README.de.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  install.ps1  install.sh
crates/claude-cli/src/: main.rs
crates/claw-cli/src/: config.rs  onboarding.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  config.rs  main.rs  onboarding.rs
crates/client/src/: stdio.rs
crates/core/: Cargo.toml  models.json
crates/core/src/: config.rs  context.rs  lib.rs  model.rs  model_catalog.rs  model_preset.rs  query.rs  session.rs  skills.rs
crates/core/src/config/: app.rs  context_manage.rs  error.rs  logging.rs  mod.rs  safety.rs  server.rs  tests.rs
crates/core/src/conversation/: ids.rs  mod.rs  records.rs
crates/core/tests/: L1_basic_loop.rs  L2_error_recovery.rs  L3_budget_context.rs  L4_lifecycle.rs  e2e_ollama.rs
crates/core/tests/harness/: builders.rs  mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: approval.rs  conversation.rs  event.rs  lib.rs  model.rs  session.rs  thinking.rs  turn.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  openai.rs  provider.rs
crates/provider/src/anthropic/: messages.rs
crates/provider/src/openai/: capabilities.rs  chat_completions.rs  mod.rs  responses.rs  shared.rs
crates/provider/src/openai/chat_completions/: stream.rs
crates/safety/src/: legacy_permissions.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: bootstrap.rs  client.rs  connection.rs  event.rs  execution.rs  lib.rs  main.rs  persistence.rs  projection.rs  provider_config.rs  runtime.rs  session.rs  titles.rs  transport.rs  turn.rs
crates/server/tests/: end_to_end.rs  persistence_resume.rs  protocol_contract.rs  skills_integration.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: apply_patch.rs  apply_patch.txt  bash.rs  bash.txt  file_write.rs  glob.rs  glob.txt  grep.rs  invalid.rs  lib.rs  lsp.rs  lsp.txt  plan.rs  question.rs  read.rs  registry.rs  registry_plan.rs  router.rs  shell_exec.rs  skill.rs  skill.txt  spec.rs  task.rs  task.txt  todo.rs  todowrite.txt  tool_summary.rs  webfetch.rs  websearch.rs
crates/tools/src/handlers/: exec_command.rs  read.rs
crates/tools/src/unified_exec/: process.rs  store.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  chatwidget.rs  chatwidget_tests.rs  custom_terminal.rs  events.rs  history_cell.rs  host.rs  input.rs  lib.rs  onboarding.rs  render.rs  runtime.rs  selection.rs  slash_command.rs  terminal.rs  tests.rs  transcript.rs  worker.rs  worker_events.rs
crates/tui/src/bottom_pane/: chat_composer.rs  command_popup.rs  mod.rs
crates/tui/src/render/: composer.rs  mod.rs  theme.rs  transcript.rs
crates/tui/src/v2/tui/: event_stream.rs
crates/utils/: Cargo.toml
crates/utils/src/: config_paths.rs  lib.rs
docs/: spec-app-config.md
